# file-crypto

./: .gitignore  CMakeLists.txt  README.md
src/: MakeSFX.cpp  add_keys.py  add_progress.py  aes256.cpp  aes256.hpp  append_i18n.py  cert_installer.cpp  clean_kdf.py  config.cpp  config.hpp  crypto.cpp  crypto.hpp  fix_config.py  fix_contact.py  fix_cr.py  fix_crypto2.py  fix_email.py  fix_err.py  fix_i18n2.py  fix_input.py  fix_mem.py  fix_menu.py  fix_path.py  fix_pause.py  fix_rng.py  fix_trim.py  fix_unicode.py  fix_vx.py  fix_wide.py  gen_i18n_part1.py  gen_i18n_part2.py  gen_i18n_part3.py  generate_i18n.py  hide_and_lnk.cpp  i18n.cpp  i18n.hpp  lang_data.json  main.cpp  make_shortcut.cpp  onekey.cpp  (+23 more)
